2003-05-12  Nick Garnett  <nickg@balti.calivar.com>

	* src/eb40a_misc.c:
	Renamed and changed behaviour of led routines. They now all have
	hal_at91_ in front to prevent namespace pollution, and all now
	just take a simple 8 bit mask and adapt to the specific pin
	assignments internally.

	* cdl/hal_arm_at91_eb40a.cdl: Added requirement for
	CYGHWR_HAL_ARM_AT91 == "R40008" to customize the variant HAL to
	the device on this board.

	* include/hal_platform_setup.h: Added _led_init and _led macros to
	initialize and work board LEDs. Ensured that LEDs work even in RAM
	startup.

	* include/pkgconf/mlt_arm_at91_eb40a_ram.ldi: 
	* include/pkgconf/mlt_arm_at91_eb40a_ram.h: 
	* include/pkgconf/mlt_arm_at91_eb40a_rom.ldi: 
	* include/pkgconf/mlt_arm_at91_eb40a_rom.h: 
	* include/pkgconf/mlt_arm_at91_eb40a_romram.ldi: 
	* include/pkgconf/mlt_arm_at91_eb40a_romram.h:
	Changed RAM configuration to work only within the 256K of SRAM
	normally shipped with these boards.

2002-07-14  Tim Drury <tdrury@siliconmotorsports.com>

	* adapted from Thomas Koeller's <Thomas.Koeller@baslerweb.com> EB40
	patch to the original AT91 ecos base.  Fixed up FLASH, RAM, and SRAM
	sizes and locations throughout.  My EB40A board came with 1MB on-board
	SRAM although the docs state SRAM is NOT included, so this port
	reflects my on-board SRAM.
	* cdl/hal_arm_at91_eb40a.cdl - changed to 66MHz clock
	* include/hal_platform_setup.h - wait states for FLASH and SRAM are the
	same as EB40 (oddly enough).  The parts are faster but so is the AT91
	part, so the pre- and post-wait state numbers came out the same.
	* include/plf_io.h - added EB40A on-board LED definitions
	* include/pkgconf/* - changed all .h and .ldi files to reflect new
	FLASH, SRAM, and RAM sizes and locations.  NOTE: I do not use Windows
	so someone else will have to create the .mlt files that the GUI
	configuration tool needs to generate the .h and .ldi files.
	* misc/*.ecm - changed to use AT49LV1614 FLASH